package com.neobank.enums;

public enum OperationStatus {
    PENDING,
    VALIDATED,
    APPROVED,
    REJECTED
}
