package com.neobank.enums;

public enum OperationType {
    DEPOSIT,
    WITHDRAWAL,
    TRANSFER
}
