package com.neobank.enums;

public enum Role {
    CLIENT,
    ADMIN,
    AGENT_BANCAIRE
}
