@startuml

enum Role {
  CLIENT
  AGENT_BANCAIRE
  ADMIN
}



enum OperationType {
  DEPOSIT
  WITHDRAW
  TRANSFER
}

enum OperationStatus {
  PENDING
  APPROVED
  REJECTED
}

class User {
  Long id
  String username
  String email
  String password
  Role role
  boolean active
  LocalDateTime createdAt
}

class Account {
  Long id
  String accountNumber
  BigDecimal balance
  Long version
}

class Operation {
  Long id
  BigDecimal amount
  OperationType type
  OperationStatus status
  LocalDateTime createdAt
  String currency
  LocalDateTime validatedAt
  LocalDateTime executedAt
}

class Document {
  Long id
  String filename
  String fileType
  String storagePath
  LocalDateTime uploadedAt
}

class OperationValidation {
  Long id
  boolean approved
  String comment
  LocalDateTime validatedAt
}

User "1" -- "0..*" Account : owns
Account "1" -- "0..*" Operation : contains
Operation "1" -- "0..*" Document : has
Operation "1" -- "0..1" OperationValidation : validated by
User "1" -- "0..*" OperationValidation : agent

@enduml
